--- a/assets/download/rnb-r-starter.Rmd
+++ b/assets/download/rnb-r-starter.Rmd
@@ -8,9 +8,13 @@ output:
     theme: flatly
   html_document:
     highlight: pygments
+    keep_md: yes
 ---
 
-Die ersten Schritte im Umgang mit etwas Neuem sollten immer beginnen mit: Wie mache ich es an, wie mache ich es aus. Bei einer Programmmiersprache wäre das dann: Wie gebe ich etwas ein, wie gebe ich etwas aus. Und zum Ausgeben braucht man ein Ding genannt Variable. Daher fange ich damit an. Wie werden Variablen initialisiert, wie weise ich ihnen einen Wert zu und wie gebe ich sie dann aus. Als erstes die Initalisierung von Variablen und die Wertezuweisung mit =, -> oder <-.
+## Variablen: Zuweisung und Ausgabe
+
+Die ersten Schritte im Umgang mit etwas Neuem sollten immer beginnen mit: Wie mache ich es an, wie mache ich es aus. Bei einer Programmmiersprache wäre das dann: Wie gebe ich etwas ein, wie gebe ich etwas aus. Und zum Ausgeben braucht man ein Ding genannt Variable. Daher fange ich damit an. Wie werden Variablen initialisiert, wie weise ich ihnen einen Wert zu und wie gebe ich sie dann aus.
+Als erstes die Initalisierung von Variablen und die Wertezuweisung mit =, -> oder <-. Und natürlich deren Ausgabe.
 
 ```{r}
 eineVariable = 32
@@ -19,26 +23,145 @@ andereVariable <- 27
 eineVariable
 andereVariable
 dritteVariable
-firstVar <- secondVar <- "komisch"
-assign("thirdVar", 22)
-firstVar
-secondVar
-thirdVar
-```
-
-Dann die Ausgabe des Wertes einer Variablen.
-
-```{r}
-3
-3+5
 eineVariable
 eineVariable + andereVariable
 print(dritteVariable)
-show(dritteVariable + eineVariable)
+firstVar <- secondVar <- "komisch"
 cat(firstVar, ",", secondVar, " - sind beide gleich -", sep = " ")
-cat("Neue Zeile, oder?\n")
 aMessage = paste(firstVar, "-","das ist dasselbe wie", secondVar, sep = " ")
 message(aMessage)
 ```
+
+## Datentypen
+
+
+
+```{r}
+ichBinInteger <- 4L
+is.integer(ichBinInteger)
+ichBinAuchInteger <- as.integer(3+5)
+class(ichBinAuchInteger)
+is.numeric(ichBinInteger)
+is.integer(ichBinAuchInteger)
+ichBinBuchstabe <- "any string"
+class(ichBinBuchstabe)
+nchar(ichBinBuchstabe)
+ichBinDatum <- as.Date("2016-02-17 00:29")
+ichBinDatum
+class(ichBinDatum)
+as.numeric(ichBinDatum)
+ichBinAuchDatum <- as.Date("2016-02-14 00:29")
+ichBinDatum-ichBinAuchDatum
+class(ichBinDatum-ichBinAuchDatum)
+as.numeric(ichBinDatum-ichBinAuchDatum)
+iAmTrue <- TRUE
+class(iAmTrue)
+iAmLogical <- 2 != 3
+iAmLogical
+iCompareCharacters <- "Red" > "Blue"
+iCompareCharacters
+```
+
+## Vektoren: Zuweisung¸ Arithmetik und Indizierung
+
+
+```{r}
+simpleSequence <- 1:12
+simpleSequence
+evenNumberSequence <- 2*1:6
+evenNumberSequence
+repeatSequence <- rep(evenNumberSequence, times = 2, length.out = 20, each = 3)
+repeatSequence
+generalSequence <- seq(from = -5, to = 10, by = 0.2)
+generalSequence
+vec1 <- c(247, 350, "Test", TRUE, 600)
+mode(vec1)
+typeof(vec1)
+vec2 <- numeric(5)
+vec2
+vec3 <- c(vec2, vec1)
+vec3
+vec10 <- c(1, 5, 10, 20, 50, 100, 500)
+vec20 <- c(0, 30)
+for(i in vec10) {
+  vec20 <- c(vec20 , i*30)
+}
+vec20
+vec30 <- c(5, 5, 5, 6, 2, 2, 2)
+vec40 <- vec30 * vec10
+vec40
+vec50 <- vec40 + c(100,0)
+vec50
+seq1 <- 1:4
+seq1 == 2
+stringSeq <- c("A", "B", "C", "D", "E", "F", "G", "H")
+funkySeq <- paste(stringSeq, seq1, sep="")
+funkySeq
+meineSeq <- 3*1:5
+meineSeq[rep(c(1,3), times = 5)]
+meineSeq[c(-3, -4)]
+names(meineSeq) <- c("A","B","C","D","E")
+meineSeq[c("A","C")]
+```
+
+## Arrays
+
+```{r}
+arr1 <- array(c(1:12), dim = c(3,2,2))
+arr1
+arr2 <- array(c(1,0) , dim = c(2,3))
+arr2
+arr1[2,2,1]
+arr1[2:3,,1]
+indexArray <- array (c(1:2), dim=c(2,3))
+indexArray
+arr1[indexArray]
+index2Array <- array (c(2,3,2,1,1,2), dim=c(2,3))
+index2Array
+arr1[index2Array]
+a <- array(1:6, dim = c(2,3))
+b <- array(7:12, dim = c(2,3))
+a * b
+# outer product
+A <- array(1:18, dim = c(3,2,3))
+B <- array(19:36, dim = c(2,3,3))
+A
+B
+AB <- A %o% B
+dim(AB)
+```
+
+## Matrizen
+
+```{r}
+aMatrix <- matrix(c(2*1:3, 3*1:3), nrow = 2, ncol = 3)
+aMatrix
+# Transponieren
+anotherMatrix <- t(aMatrix)
+# Matrizenmultiplikation
+aMatrix %*% anotherMatrix 
+# Kreuzprodukt von A, B == t(A) %*% B
+crossprod(aMatrix,2*1:2)
+```
+
+
+## Faktoren
+
+```{r}
+stadt <- c("Berlin", "Dresden", "Hamburg", "Berlin", "Berlin", "Hamburg", "Dresden")
+kategorie <- c("Bekleidung", "Schuhe", "Kosmetik", "Kosmetik", "Schuhe", "Bekleidung", "Bekleidung")
+betrag <- c(5000, 4500, 3500, 2500, 1000, 2000, 5500)
+stadtAsFaktor <- factor(stadt)
+print(stadtAsFaktor)
+as.numeric(stadtAsFaktor)
+levels(stadtAsFaktor)
+levels(stadtAsFaktor) <- c("BER", "DRE", "HAM")
+stadtCodeFaktor <- factor(stadtAsFaktor, labels=c("B", "D", "H"))
+print(stadtCodeFaktor)
+table(stadt)
+tapply(betrag, kategorie, sum)
+```
+
+
 
 
