--- a/assets/download/rnb/rnb-r-starter.Rmd
+++ b/assets/download/rnb/rnb-r-starter.Rmd
@@ -6,10 +6,16 @@ output:
     df_print: kable
     highlight: pygments
     theme: flatly
+    toc: yes
   html_document:
     highlight: pygments
     keep_md: yes
 ---
+
+## R lernen
+
+Ich bin bei [XDA Developers](https://depot.xda-developers.com/){:target="_blank"} auf einige Online Kurse über Machine Learning gestoßen. Und da ich darüber schon immer mehr wissen wollte und neuer Kopf-Input gerade anstand, habe ich angefangen den Kurs zu schauen. Ich erinnerte mich außerdem, während des US Wahlkampfs diesen spannenden Artikel [Text analysis of Trump's tweets confirms he writes only the (angrier) Android half](http://varianceexplained.org/r/trump-tweets/){:target="_blank"} von _David Robinson von Stack Overflow_ gelesen zu haben. Das wollte ich auch können. Also war es an der Zeit, das ganz alte Statistik-Wissen zu reanimieren und einzusteigen. Der Artikel ist nur eine Sammlung der ersten Tutorials über die Grundlagen von R -- Variablen, Ein- und Ausgabe, Operationen. Eigenlich eher für mich als Wiederholung geschrieben. Vielleicht kriegt ja noch jemand Lust, R auszuprobieren. 
+Alles wird heute mit Torten und Balken begründet und wir _glauben_, sobald wir eine begründete Grafik sehen. Ich denke, man sollte sie auch selbst herstellen können.
 
 ## Variablen: Zuweisung und Ausgabe
 
@@ -34,7 +40,7 @@ message(aMessage)
 
 ## Datentypen
 
-
+Integer und Long, Character und String, Datum und Bool. 
 
 ```{r}
 ichBinInteger <- 4L
@@ -64,6 +70,7 @@ iCompareCharacters
 
 ## Vektoren: Zuweisung¸ Arithmetik und Indizierung
 
+Alles in R ist in gewisser Weise eine Liste, eine Reihe von Daten. Ein Vektor kann Elemente unterschiedlicher Datentypen beinhalten. Und ganz wichtig: Die Indizierung der Elemente beginnt bei 1. 
 
 ```{r}
 simpleSequence <- 1:12
@@ -106,6 +113,8 @@ meineSeq[c("A","C")]
 
 ## Arrays
 
+Ein Array ist eine Vektor, dessen Werte in den Dimensionen des Arrays angeordnet sind. Das kann man sich so vorstellen, das z.B. bei einem 2-dimensionalen Array dieses mit den Werten des Vektors beginnend bei dem Element _links oben_ zuerst die Zeilen (row) nach unten gefüllt werden und dann in die nächste Spalte (col) nach oben gesprungen wird und diese zeilenweise aufgefüllt wird. 
+
 ```{r}
 arr1 <- array(c(1:12), dim = c(3,2,2))
 arr1
@@ -133,6 +142,8 @@ dim(AB)
 
 ## Matrizen
 
+Matrizen sind 2-dimensionale Arrays mit besonderen Möglichkeiten. Lineare Gleichungen lassen sich z.B. mit Matrizenarithmetik lösen.
+
 ```{r}
 aMatrix <- matrix(c(2*1:3, 3*1:3), nrow = 2, ncol = 3)
 aMatrix
@@ -146,6 +157,8 @@ crossprod(aMatrix,2*1:2)
 
 
 ## Faktoren
+
+Ein Vektor kann in Faktoren, den Gruppen gleicher Werte, zerlegt werden. Das vergleichbar einem `GROUP BY` in SQL.
 
 ```{r}
 stadt <- c("Berlin", "Dresden", "Hamburg", "Berlin", "Berlin", "Hamburg", "Dresden")
