--- a/assets/download/rnb/rnb-regression.Rmd
+++ b/assets/download/rnb/rnb-regression.Rmd
@@ -14,11 +14,11 @@ output:
 
 ## Regression
 
-Statistische Auswertungen drehen sich ganz oft darum, aus den Werten der Vergangenheit ein Model zu erstellen, mit dem ich den Verlauf von bestimmten Variablen in der Zukunft voraus sagen kann. Eine Möglichkeit der Modellbildung ist die Lineare Regression. 
+Statistische Auswertungen drehen sich oft darum, aus den Werten der Vergangenheit ein Model zu erstellen, mit dem man den Verlauf von bestimmten Variablen in der Zukunft voraus sagen kann. Eine Möglichkeit der Modellbildung ist die Lineare Regression. 
 
-Für eine gegebene Anzahl von Werten $Y=f(X)$ möchte man dabei die Funktion $f(X)$ herausfinden. $Y$ ist die -- von den unabhängigen Variablen in der Funktion $f(X)$ -- abhängige Variable. Die Funktion $f(X)$ besteht aus einer liniearen Gleichung unabhängiger Variablen. Bei der Linearen Regression wird eine Gerade durch die Punkte $[X,Y]$ gelegt. Für die Gerade gilt $Y=\beta X + \alpha$. Dabei ist $\alpha$ der Offset, bei dem die Gerade die Y-Achse schneidet ($X=0$). $\beta$ ist die Steigung der Gerade. Da wir nur die $[X,Y]$-Koordinaten der Punkte haben, muß man eine Möglichkeit der Bewertung der Güte der Geraden haben. Dazu gibt es mehrere Verfahren, eines davon ist, die Abstände der Punkte zur Geraden über alle Punkte zu minimieren, z.B. mit Hilfe der Methode der kleinsten Quadrate. Das alles noch theoretischer nachlesen kann man [hier bei Wikipedia](https://de.wikipedia.org/wiki/Lineare_Regression#Einfache_lineare_Regression){:target="_blank"}.  
+Ganz vereinfacht gesagt: Für eine gegebene Anzahl von Werten $Y=f(X)$ möchte man dabei die Funktion $f(X)$ herausfinden. Damit können dann zukünftige Werte auf Basis des Vergangenen berechnet werden. $Y$ ist die -- von den unabhängigen Variablen in der Funktion $f(X)$ -- abhängige Variable. Die Funktion $f(X)$ besteht aus einer liniearen Gleichung unabhängiger Variablen. Bei der Linearen Regression wird eine Gerade durch die Punkte $[X,Y]$ gelegt. Für die Gerade gilt $Y=\beta X + \alpha$. Dabei ist $\alpha$ der Offset, bei dem die Gerade die Y-Achse schneidet ($X=0$). $\beta$ ist die Steigung der Gerade. Da wir nur die $[X,Y]$-Koordinaten der Punkte haben, muß man eine Möglichkeit der Bewertung der Güte der Geraden haben. Dazu gibt es mehrere Verfahren, eines davon ist, die Abstände der Punkte zur Geraden über alle Punkte zu minimieren, z.B. mit Hilfe der Methode der kleinsten Quadrate. Das alles noch theoretischer nachlesen kann man [hier bei Wikipedia](https://de.wikipedia.org/wiki/Lineare_Regression#Einfache_lineare_Regression){:target="_blank"}.  
 
-## Das Model - Capital Asset Pricing Model
+## Das Capital Asset Pricing Model
 
 In dem Kurs wurde das alles am Beispiel des Capital Asset Pricing Models berechnet. Dabei soll die zukünftige Auschüttung einer Versicherung anhand der Wertentwicklung in der Vergangenheit vorhergesagt werden. Die Formel zur Bewertung einer Versicherung ist wie folgt:
 
@@ -32,9 +32,13 @@ $$
 \beta_i = \frac{(R_i - R_{riskfree})}{(R_{market} - R_{riskfree})}
 $$
 
-Um Werte zu erhalten, kann man diese einfach von Yahoo Finance herunterladen. Als Aufgabe sollte das $\beta$ von Google berechnet werden. Dazu werden als erstes die historischen Werte des Google Index (GOOG) für die letzten 5 Jahre por Monat heruntergeladen. Man erhält dann eine CSV-Datei, die man in R einlesen kann. Als Market-Werte wird der NASDAQ Composite (^IXIC) verwendet. Für denselben Zeitraum hier die historischen Werte herunterladen. Dann noch als risikofreie Vergleichswerte die Werte von Schatzbriefen nehmen -- hier Treasury Yield 5 Years (^FVX).
+Um Werte zu erhalten, mit denen man eine Berechnung durchspielen kann, kann man diese bei Yahoo Finance herunterladen. Als Aufgabe sollte das $\beta$ von Google berechnet werden. Dazu werden als erstes die historischen Werte des Google Index (GOOG) für die letzten 5 Jahre in Monatsschritten heruntergeladen. Man erhält eine CSV-Datei, die man in R einlesen kann. Als Market-Werte wird der NASDAQ Composite INdex (^IXIC) verwendet. Für denselben Zeitraum werden hier die historischen Werte herunterladen. Und dann noch als risikofreie Vergleichswerte die Werte von Schatzbriefen nehmen -- hier Treasury Yield 5 Years (^FVX). Diese Dateien werden eingelesen und in der Funktion *preProcess* vorverarbeitet. Dabei werden aus den Werten der Aktien die Ausschüttungen berechnet. Die Ausschüttung ergibt sich aus 
 
-Diese Dateien werden eingelesen und in der Funktion +preProcess+ vorverarbeitet.
+$$
+R = \frac{Neuer Preis - Alter Preis}{Alter Preis} = \frac{Neuer Preis}{Alter Preis} - 1
+$$
+
+Am Schluß werden dann die Kennwerte der Regression ausgegeben. Wenn man ein Diagramm mit den Grunddaten anlegt, kann man mit *plot(Kennwerte der Regression)* die Regressiongerade in das zuletzt erstellte Diagramm zeichnen lassen. 
 
 ```{r}
 # Bewertete Versicherung: Google
