--- a/_posts/2017-05-13-rp17-was-wird.md
+++ b/_posts/2017-05-13-rp17-was-wird.md
@@ -3,7 +3,7 @@ permalink: /re-publica17-was-wird/
 title: "re:publica 17: Was wird."
 date: 2017-05-14 08:45:30 +02:00
 last_modified_at: 2017-05-14 08:45:30 +02:00
-excerpt: "Die re:publica 17 ist vorbei. Was habe ich mitgenommen? Was kommt als nächstes?"
+excerpt: "Die re:publica 17 ist vorbei. Und was kommt als nächstes?"
 header:
         image: /assets/images/posts/170513-rp17-2017-05-08 04.04.58 1.jpg
         caption: "&copy; [Kral • Photography](https://kral-photography.com)"
