--- a/_posts/2017-05-13-rp17-was-wird.md
+++ b/_posts/2017-05-13-rp17-was-wird.md
@@ -10,5 +10,5 @@ header:
 image:
         twitter: /assets/images/posts/170513-rp17-2017-05-08 04.04.58 1_header.jpg
 categories: tech 
-tags: blog life world future
+tags: blog life world  rp17 future
 ---
