--- a/_posts/2017-05-13-rp17-was-wird.md
+++ b/_posts/2017-05-13-rp17-was-wird.md
@@ -7,21 +7,19 @@ excerpt: "Die re:publica 17 ist vorbei. Was kommt jetzt? Immer noch viel Aufregu
 comments: true
 comments_locked: false
 header:
-        image: /assets/images/posts/170513-rp17-2017-05-08 04.04.58 1.jpg
+        image: /assets/images/posts/170513-rp17-2017-05-08 04.04.58_1_header.jpg
         caption: "&copy; [Kral • Photography](https://kral-photography.com)"
 image:
-        twitter: /assets/images/posts/170513-rp17-2017-05-08 04.04.58 1_header.jpg
+        twitter: /assets/images/posts/170513-rp17-2017-05-08 04.04.58_1.jpg
 categories: tech 
 tags: blog life world  rp17 future
 ---
-
-Weiter im zweiten Teil: [Was wird?]({{ site.baseurl }}{% post_url 2017-05-13-rp17-was-wird %})
 
 {% include toc_open title="TOC" %}
 
 ## Datensammeln war gestern
 
-Immer noch viel Aufregung über das Datensammeln. Die Versuche, die Freiheit zu erhalten. Das Überwachen einzuschränken oder das Überwachtwerden einzuschränken. 
+Immer noch viel Aufregung über das Datensammeln. Die Versuche, die Freiheit zu erhalten. Das Überwachen oder das Überwachtwerden einzuschränken. 
 
 Wir sind längst nicht mehr in der Phase des Datensammelns. Wir sind schon längst in die Phase der Datenmanipulation eingetreten. Und das wird erst so langsam zum Thema gemacht. Das wird in den nächsten Jahren der neue Hype werden. Daten zu sammeln ist heutzutage Grundvorraussetzung jeder digitalen Unternehmung. Ohne das geht es nicht mehr.  
 Aber das Datensammeln ist ja noch nie der reine Zweck von Überwachung gewesen. Es ist ein so schöner, einfacher Gedanke: Da ist eine Kamera und hinter dem Monitor, der die Kamerabilder anzeigt, sitzt ein Mensch und schaut sich das an und paßt auf, das mir da niemand auf den Kopf haut oder ich niemandem heimlich ein Bein stelle. Diese Vorstellung ist leider naiv und gefährlich aus meheren Gründen. Als erstes: wenn wir das Beispiel skalieren, kann da natürlich nicht an jedem Bildschirm einer sitzen, der sich das 24/7 anschaut. Was dazu führt, das die Bilder maschinell ausgewertet werden. Was dazu führt, das Algorithmen für verschiedene Überwachungsanforderungen, wie beispielsweise Gesichtserkennung oder Bewegunsgstracking, geschaffen werden. Und da bei der Masse an Informationen und der Komplexität menschlicher Beziehungen, kennen wir wahrscheinlich einige Anforderungen an die Daten erst in Zukunft, weshalb wir die Daten speichern müssen, um sie in Zukunft auswerten zu können. Dabei werden dann aus den Daten Profile erstellt. Und damit bin ich wieder beim Anfang, das das Datensammeln nicht der Zweck von Überwachung ist.   
@@ -34,3 +32,9 @@ Google baut heute Prozessoren, die mit Machine Learning alle die Datenströme au
 Die Daten werden gesammelt, um etwas über uns zu erfahren. Nämlich wie wir am leichtesten zu manipulieren sind. Datenmanipulation ist die Phase, in die wir bereits eingetreten sind. Aber es werden nicht unsere gesammelten Daten manipuliert. Es werden Daten, die aussehen wie echte Daten, in die soziale Sphere eingespeist, um uns zu manipulieren. Oder, und das hat weniger etwas mit dem Daten sammeln zu tun, es werden gleich ganze Systeme manipuliert, so daß sie anders oder gar nicht mehr funktionieren.
 
 Da kommt man ja mit dem Meinung haben gar nicht mehr hinterher: http://www.zeit.de/politik/ausland/2017-06/katar-russland-hacker-saudi-arabien-iran-trump-israel-fbi-cnn 
+
+https://markmanson.net/everything-is-fucked
+https://markmanson.net/outrage
+
+
+Die Ausstellung _Hufelandstraße_: Was für eine graue, gleichgeschaltete Realität da zu sehen ist. Selbst die Kinder sehen für mich heute gleichgeschaltet aus. Meine Feststellung: Wenn man sich eine lange Zeit (meine lange Zeit: 18 Jahre) in einem Kontinuum bewegt, in ihm aufwächst, nimmt man jede Realität als gegeben hin. Als Beispiel nur: Wie sahen damals 1989 die Waggons der Deutschen Reichsbahn (ja, die hieß damals nich so in der DDR) aus? Das war vergleichbar mit der Innenausstattung der Waggons 2. Klasse der Srilankan Railway 2006. Und das haben wir als Relaität akzeptiert. Auf den Bildern sehen die Häuser aus, als wären gerade erst die Panzer der Sowietarmee abgezogen, nachdem sie Berlin '45 eingenommen hatten.    
