--- a/_posts/2017-05-13-rp17-was-wird.md
+++ b/_posts/2017-05-13-rp17-was-wird.md
@@ -1,9 +1,9 @@
 ---
-permalink: /re-publica17-was-wird/
-title: "re:publica 17: Was wird."
+permalink: /re-publica17-was-wird-meinungen-sind-wie-daten/
+title: "re:publica 17: Was wird: Meinungen sind wie Daten!"
 date: 2017-05-14 08:45:30 +02:00
 last_modified_at: 2017-05-14 08:45:30 +02:00
-excerpt: "Die re:publica 17 ist vorbei. Was kommt jetzt? Immer noch viel Aufregung über das Datensammeln. Und zu wenig Aufmerksamkeit für das Daten manipulieren."
+excerpt: "Die re:publica 17 ist vorbei. Was kommt jetzt? Immer noch viel Aufregung über das Datensammeln. Und zu wenig Aufmerksamkeit für das Daten manipulieren. Und Meinungen sind wie Daten!"
 comments: true
 comments_locked: false
 header:
